<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android2ee.basile.multiplication.view.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:max="120"
            android:progress="120"
            android:progressDrawable="@drawable/progressbar_background" />



        <TextView
            android:id="@+id/txvElapsedTime"
            style="@style/textview_basics"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/mainact_txvQuestionNumber" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/txvScore"
            style="@style/textview_basics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainact_txvScore" />

        <ImageView
            android:layout_weight="1"
            android:id="@+id/imvScoreBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_badge_hero"/>
        <TextView
            android:id="@+id/txvQuestionNumber"
            style="@style/textview_basics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainact_txvQuestionNumber" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvQuestion"
            style="@style/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/item_background_opaque"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/question_string_init"
            android:textSize="28sp" />


        <ImageView
            android:id="@+id/imvBadgeAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            app:srcCompat="@drawable/ic_check" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lilRightAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/txvRightAnswer"
            style="@style/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/item_background_opaque"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="txvQuestion"
            android:textSize="28sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            app:srcCompat="@drawable/ic_check" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/imbNextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_shape"
            app:srcCompat="@drawable/ic_arrow_forward"
            android:visibility="gone" />

        <include layout="@layout/keyboard_shrinked" />
    </LinearLayout>
</LinearLayout>
